tests/fixtures/invalid/none_notin_int.py
# Cannot use 'not in' with None and Int
x: bool = None not in 1
